--- a/home/templates/home/profile_update.html
+++ b/home/templates/home/profile_update.html
@@ -91,6 +91,16 @@
             <div class="bg-white px-4 py-5 sm:p-6">
             
             <div class="grid grid-cols-6 gap-6">
+
+              <div class="col-span-6 sm:col-span-6 lg:col-span-6">
+
+               {{ form.phone|as_crispy_field }} 
+              </div>
+
+              <div class="col-span-6 sm:col-span-3 lg:col-span-2">
+                
+                {{ form.gender|as_crispy_field }}
+              </div>
           
               <div class="col-span-6 sm:col-span-6 lg:col-span-2">
                 
@@ -102,23 +112,42 @@
                {{ form.experience_years|as_crispy_field }} 
               </div>
 
-              <div class="col-span-6 sm:col-span-3 lg:col-span-2">
-                {{ form.country|as_crispy_field }}
+              <div class="col-span-6 sm:col-span-6 lg:col-span-6 mb-7">
+
+                <!-- custom country, state and city pulled of geocountry data API -->
+             
+              <div class="flex flex-auto gap-4">
+                
+                  <div>
+                  <label for="countryId" class="mb-2 font-bold block text-sm font-medium text-black-700">Country*</label>
+                  <select name="country" class="countries bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" id="countryId" required>
+                      <option value="">Select Country</option>
+                  </select>
+                  </div>
+                  
+                  <div>
+                    <label for="StateId" class="mb-2 font-bold block text-sm font-medium text-black-700">State*</label>
+                  <select name="state" class="states w-40 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" id="stateId" required>
+                      <option value="">Select State</option>
+                  </select>
+                  </div>
+                  <div>
+                    <label for="cityId" class="mb-2 font-bold block text-sm font-medium text-black-700">City*</label>
+                  <select name="city" class="cities w-40 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" id="cityId" required>
+                      <option value="">Select City</option>
+                  </select>
+                  </div>
               </div>
+            <!-- API data ends here.. -->
+              </div>
+
             </div>
 
             <!-- Phone and experience -->
             <div class="grid grid-cols-6 gap-6">
           
-              <div class="col-span-6 sm:col-span-3 lg:col-span-2">
-                
-                {{ form.gender|as_crispy_field }}
-              </div>
-
-              <div class="col-span-6 sm:col-span-6 lg:col-span-4">
-
-               {{ form.phone|as_crispy_field }} 
-              </div>
+          
+              
 
               <div class="col-span-6 sm:col-span-6 lg:col-span-6">
                 {{ form.address|as_crispy_field }}
@@ -297,5 +326,6 @@
     </div>
   </div>
 </div>
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+<script src="//geodata.solutions/includes/countrystatecity.js"></script>
 {% endblock 'content' %}
