--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -42,27 +42,27 @@
             </div>
             <div class="w-full lg:w-4/12 px-4 lg:order-1">
               <div class="flex justify-center py-4 lg:pt-4 pt-8">
-                <div class="mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600"><i class="fas fa-code text-lg"></i> {{ num_projects }}</span><span class="text-sm text-blueGray-400">Projects</span>
+                <div class="mr-1 p-3 text-center">
+                  <span class="text-sm font-bold block uppercase tracking-wide text-lime-600"><i class="fas fa-code text-sm text-lime-600"></i> {{ num_projects }}</span><span class="text-sm text-blueGray-400">Projects</span>
                 </div>
-                <div class="mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600"><i class="fas fa-exchange-alt"></i> 10</span><span class="text-sm text-blueGray-400">Connections</span>
+                <div class="mr-1 p-3 text-center">
+                  <span class="text-sm font-bold block uppercase tracking-wide text-lime-600"><i class="fas fa-exchange-alt text-lime-600"></i> 10</span><span class="text-sm text-blueGray-400">Connections</span>
                 </div>
                 <div class="lg:mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600"><i class="far fa-clock text-lg"></i> {{ profile.experience_years }}</span><span class="text-sm text-blueGray-400">Experience</span>
+                  <span class="text-sm font-bold block tracking-wide text-lime-600"><i class="far fa-clock text-sm text-lime-600"></i> {{ profile.experience_years }} yrs</span><span class="text-sm text-blueGray-400">Experience</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="text-center mt-0">
             <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">
-              {{ request.user.first_name }} {{ request.user.last_name }}
+              {{ request.user.first_name }} {{request.user.middle_name}} {{ request.user.last_name }}
             </h3>
             <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
               <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
-              {{ profile.country.name }}
+              {{ profile.city }}, {{ profile.state }} {{ profile.country }}
             </div>
-            <div class="mb-2 text-blueGray-600 mt-10">
+            <div class="mb-2 text-blueGray-600 mt-5">
               <i class="fas fa-briefcase mr-2 text-lg text-blueGray-400"></i>
               {{ profile.job_title }}
             </div>
@@ -70,10 +70,124 @@
               <i class="fas fa-university mr-2 text-lg text-blueGray-400"></i>University of Computer Science
             </div>
           </div>
-          <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
+
+          <!-- Tab section -->
+          <ul class="
+            nav nav-tabs nav-justified
+            flex flex-col
+            md:flex-row
+            flex-wrap
+            list-none
+            border-b-0
+            pl-0
+            mb-4
+          " id="tabs-tabJustify" role="tablist">
+            <li class="nav-item flex-grow text-center" role="presentation">
+              <a href="#tabs-aboutJustify" class="
+                nav-link
+                w-full
+                block
+                font-medium
+                text-xs
+                leading-tight
+                uppercase
+                border-x-0 border-t-0 border-b-2 border-transparent
+                px-6
+                py-3
+                my-2
+                hover:border-transparent hover:bg-gray-100
+                focus:border-transparent
+                active
+              " id="tabs-about-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-aboutJustify" role="tab"
+                aria-controls="tabs-aboutJustify" aria-selected="true">About</a>
+            </li>
+            <li class="nav-item flex-grow text-center" role="presentation">
+              <a href="#tabs-profileJustify" class="
+                nav-link
+                w-full
+                block
+                font-medium
+                text-xs
+                leading-tight
+                uppercase
+                border-x-0 border-t-0 border-b-2 border-transparent
+                px-6
+                py-3
+                my-2
+                hover:border-transparent hover:bg-gray-100
+                focus:border-transparent
+              " id="tabs-profile-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-profileJustify" role="tab"
+                aria-controls="tabs-profileJustify" aria-selected="false">Projects</a>
+            </li>
+            <li class="nav-item flex-grow text-center" role="presentation">
+              <a href="#tabs-messagesJustify" class="
+                nav-link
+                w-full
+                block
+                font-medium
+                text-xs
+                leading-tight
+                uppercase
+                border-x-0 border-t-0 border-b-2 border-transparent
+                px-6
+                py-3
+                my-2
+                hover:border-transparent hover:bg-gray-100
+                focus:border-transparent
+              " id="tabs-messages-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-messagesJustify" role="tab"
+                aria-controls="tabs-messagesJustify" aria-selected="false">Work Experience</a>
+            </li>
+            <li class="nav-item flex-grow text-center" role="presentation">
+              <a href="#tabs-messagesJustify" class="
+                nav-link
+                w-full
+                block
+                font-medium
+                text-xs
+                leading-tight
+                uppercase
+                border-x-0 border-t-0 border-b-2 border-transparent
+                px-6
+                py-3
+                my-2
+                hover:border-transparent hover:bg-gray-100
+                focus:border-transparent
+              " id="tabs-education-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-educationJustify" role="tab"
+                aria-controls="tabs-messagesJustify" aria-selected="false">Education</a>
+            </li>
+          </ul>
+          <!-- Tabs end here.. -->
+
+          <!-- tab contents start here... -->
+        <div class="tab-content" id="tabs-tabContentJustify">
+            
+
+            <div class="tab-pane fade show active mb-5 mx-auto" id="tabs-aboutJustify" role="tabpanel"
+              aria-labelledby="tabs-about-tabJustify">
+              {{ profile.about|safe }}
+            </div>
+
+            <div class="tab-pane fade" id="tabs-profileJustify" role="tabpanel" aria-labelledby="tabs-profile-tabJustify">
+              Tab 2 content justify
+            </div>
+
+            <div class="tab-pane fade" id="tabs-messagesJustify" role="tabpanel" aria-labelledby="tabs-profile-tabJustify">
+              Tab 3 content justify
+            </div>
+
+            <div class="tab-pane fade" id="tabs-educationJustify" role="tabpanel" aria-labelledby="tabs-education-tabJustify">
+              Tab for education
+            </div>
+
+        </div>
+          <!-- tab contents end here... -->
+
+
+          <!-- <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
             <div class="flex flex-wrap justify-center">
               <div class="w-full lg:w-9/12 px-4">
                 <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
+
                   An artist of considerable range, Jenna the name taken by
                   Melbourne-raised, Brooklyn-based Nick Murphy writes,
                   performs and records all of his own music, giving it a
@@ -84,9 +198,16 @@
               </div>
             </div>
           </div>
+         -->
+
         </div>
       </div>
     </div>
+
+    <!-- second test tab -->
+  
+
+
 
     <!-- footer starts here..... -->
     <footer class="relative bg-blueGray-200 pt-8 pb-6 mt-8">
@@ -100,7 +221,8 @@
     </div>
   </div>
 </footer>
-  </section>
+</section>
 </main>
-    
+
+
 {% endblock 'content' %}
