--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -56,7 +56,7 @@
           </div>
           <div class="text-center mt-0">
             <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">
-              {{ request.user.first_name }} {{request.user.middle_name}} {{ request.user.last_name }}
+              {{ user.first_name }} {{ user.middle_name}} {{ user.last_name }}
             </h3>
             <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
               <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
@@ -155,20 +155,61 @@
               " id="tabs-education-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-educationJustify" role="tab"
                 aria-controls="tabs-messagesJustify" aria-selected="false">Education</a>
             </li>
+
+            <li class="nav-item flex-grow text-center" role="presentation">
+              <a href="#tabs-publicationJustify" class="
+                nav-link
+                w-full
+                block
+                font-medium
+                text-xs
+                leading-tight
+                uppercase
+                border-x-0 border-t-0 border-b-2 border-transparent
+                px-6
+                py-3
+                my-2
+                hover:border-transparent hover:bg-gray-100
+                focus:border-transparent
+              " id="tabs-publication-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-publicationJustify" role="tab"
+                aria-controls="tabs-publicationJustify" aria-selected="false">Publications</a>
+            </li>
+
+            <li class="nav-item flex-grow text-center" role="presentation">
+              <a href="#tabs-contactJustify" class="
+                nav-link
+                w-full
+                block
+                font-medium
+                text-xs
+                leading-tight
+                uppercase
+                border-x-0 border-t-0 border-b-2 border-transparent
+                px-6
+                py-3
+                my-2
+                hover:border-transparent hover:bg-gray-100
+                focus:border-transparent
+              " id="tabs-contact-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-contactJustify" role="tab"
+                aria-controls="tabs-contactJustify" aria-selected="false">Contacts</a>
+            </li>
+
           </ul>
           <!-- Tabs end here.. -->
 
           <!-- tab contents start here... -->
         <div class="tab-content" id="tabs-tabContentJustify">
             
-
-            <div class="tab-pane fade show active mb-5 mx-auto" id="tabs-aboutJustify" role="tabpanel"
+            <div class="p-10 tab-pane fade show active mb-5 mx-auto text-gray-600" id="tabs-aboutJustify" role="tabpanel"
               aria-labelledby="tabs-about-tabJustify">
               {{ profile.about|safe }}
             </div>
 
-            <div class="tab-pane fade" id="tabs-profileJustify" role="tabpanel" aria-labelledby="tabs-profile-tabJustify">
-              Tab 2 content justify
+            <div class="p-10 tab-pane fade" id="tabs-profileJustify" role="tabpanel" aria-labelledby="tabs-profile-tabJustify">
+              {% for project in projects %}
+
+                 <a href=" {% url 'homer:project_details' project.pk %}"> {{ project.title }} </a>
+              {% endfor %}
             </div>
 
             <div class="tab-pane fade" id="tabs-messagesJustify" role="tabpanel" aria-labelledby="tabs-profile-tabJustify">
@@ -177,6 +218,14 @@
 
             <div class="tab-pane fade" id="tabs-educationJustify" role="tabpanel" aria-labelledby="tabs-education-tabJustify">
               Tab for education
+            </div>
+
+            <div class="tab-pane fade" id="tabs-publicationJustify" role="tabpanel" aria-labelledby="tabs-publication-tabJustify">
+              Tab for Publicaions
+            </div>
+
+            <div class="tab-pane fade" id="tabs-contactJustify" role="tabpanel" aria-labelledby="tabs-contact-tabJustify">
+              Tab for contacts
             </div>
 
         </div>
