--- a/home/templates/home/myprojects.html
+++ b/home/templates/home/myprojects.html
@@ -1,3 +1,4 @@
+<!-- projects -->
 {% extends 'base.html' %}
 
 
@@ -6,27 +7,33 @@
 <!-- {% if forloop.counter0 <= 2 %} -->
 <!-- {% endif %} -->
 
-<h2 class="text-center mt-3 font-bold">Submitted Projects</h2>
-<div class="container">
-    <div class="row row-cols-1 row-cols-md-3">
+<h2 class="text-center mt-3 font-bold">Your Projects</h2>
+<div class="flex justify-center">
+    <div class="container grid grid-cols-3 gap-2 mx-auto">
     {% for project in page_object %}
-        <div class="col">
-            <div class="card my-2">
-            <img src="{{ project.images_set.first }}" class="card-img-top">
+        <div class="rounded-lg shadow-lg bg-white">
+            <div class="w-full rounded">
+            <img src="{{ project.images_set.first }}" class="rounded">
               <div class="card-body">
-                <h5 class="card-title font-bold">{{ project.title }}</h5>
-                <p class="card-text">{{ project.description|safe|truncatewords:15 }}
+                <h5 class="mt-3 text-justify font-bold px-3">{{ project.title }}</h5>
+                <div class="text-justify px-3">
+                    <p>{{ project.description|safe|truncatewords:15 }}
                 </p>
+                <a href="{% url 'homer:project_details' project.pk %}" class="mt-2 mb-3 float-right px-2 py-1 bg-blue-500 text-white font-medium text-sm leading-tight rounded-lg shadow-md hover:bg-blue-600 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">See projects details</a>
+                </div>
                 <br>
-                <a href="{% url 'homer:project_details' project.pk %}" class="btn btn-primary">See projects details</a>
+                <div class="float-left mt-4 mb-2 px-3 text-sm text-blueGray-500">
+                 Project by: <a href="#" class="font-medium text-blue-400 italic rounded p-0.5 pb-1 p-x-1 underline font-bold"> @{{ project.user }} </a>
+                </div>
               </div>
             </div>
         </div>
     {% endfor %}
     </div>                 
 </div>
+
 {% if projects %}
-<div class="container pagination my-5 place-content-center">
+<div class="container pagination my-5 place-content-center text-center">
     <span class="step-links">
         {% if page_object.has_previous %}
             <a href="?page=1"> <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mx-5"> &laquo; First </button></a>
@@ -43,14 +50,11 @@
         {% endif %}
     </span>
 </div>
-
 {% else %}
 <div class="mx-auto text-center">
     
     <h3 class="mt-10 text-2xl text-red-400 font-bold">You have not submitted any projects yet</h3>
 </div>
-
 {% endif %}
 {% endblock 'content' %}
-
 
