--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -207,8 +207,12 @@
 
             <div class="p-10 tab-pane fade" id="tabs-profileJustify" role="tabpanel" aria-labelledby="tabs-profile-tabJustify">
               {% for project in projects %}
-
-                 <a href=" {% url 'homer:project_details' project.pk %}"> {{ project.title }} </a>
+                <div class="flex justify-center">
+                <ul class="bg-white rounded-lg w-full">
+                  <a href=" {% url 'homer:project_details' project.pk %}"> <li class="px-6 py-2 border-b border-gray-200 w-full rounded-t-lg text-blue-600 font-semibold text-sm">{{ project.title }}</li></a>
+                </ul>
+              </div>
+                  
               {% endfor %}
             </div>
 
