--- a/home/templates/home/profile_update.html
+++ b/home/templates/home/profile_update.html
@@ -170,7 +170,108 @@
   </div>
 </div>
 
-<!-- End of form one -->
+<!-- End of form one > UserProfile -->
+
+<!-- Work experience begins here... -->
+<div class="mt-5 md:col-span-2 md:mt-0 mr-5">
+<form method="post" enctype="multipart/form-data">
+{% csrf_token %} 
+     
+        <div class="shadow sm:overflow-hidden sm:rounded-md">
+          <div class="space-y-6 bg-white px-4 py-5 sm:p-6">             
+
+            <!-- About Section -->
+
+              <div class="mt-2">
+                
+                {{ form.media }}
+                {{ form.about|as_crispy_field }} 
+                <span class="mt-2 text-sm text-gray-500">Work Experience</span>
+              </div>
+
+                <!-- country, state, zip -->
+          <div class="overflow-hidden shadow sm:rounded-md">
+            <div class="bg-white px-4 py-5 sm:p-6">
+            
+            <div class="grid grid-cols-6 gap-6">
+
+              <div class="col-span-6 sm:col-span-6 lg:col-span-6">
+
+               {{ form.phone|as_crispy_field }} 
+              </div>
+
+              <div class="col-span-6 sm:col-span-3 lg:col-span-2">
+                
+                {{ form.gender|as_crispy_field }}
+              </div>
+          
+              <div class="col-span-6 sm:col-span-6 lg:col-span-2">
+                
+                {{ form.job_title|as_crispy_field }}
+              </div>
+
+              <div class="col-span-6 sm:col-span-3 lg:col-span-2">
+
+               {{ form.experience_years|as_crispy_field }} 
+              </div>
+
+              <div class="col-span-6 sm:col-span-6 lg:col-span-6 mb-7">
+
+                <!-- custom country, state and city pulled of geocountry data API -->
+             
+              <div class="flex flex-auto gap-4">
+                
+                  <div>
+                  <label for="countryId" class="mb-2 font-bold block text-sm font-medium text-black-700">Country*</label>
+                  <select name="country" class="countries bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" id="countryId" required>
+                      <option value="">Select Country</option>
+                  </select>
+                  </div>
+                  
+                  <div>
+                    <label for="StateId" class="mb-2 font-bold block text-sm font-medium text-black-700">State*</label>
+                  <select name="state" class="states w-40 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" id="stateId" required>
+                      <option value="">Select State</option>
+                  </select>
+                  </div>
+                  <div>
+                    <label for="cityId" class="mb-2 font-bold block text-sm font-medium text-black-700">City*</label>
+                  <select name="city" class="cities w-40 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" id="cityId" required>
+                      <option value="">Select City</option>
+                  </select>
+                  </div>
+              </div>
+            <!-- API data ends here.. -->
+              </div>
+
+            </div>
+
+            <!-- Phone and experience -->
+            <div class="grid grid-cols-6 gap-6">
+
+              <div class="col-span-6 sm:col-span-6 lg:col-span-6">
+                {{ form.address|as_crispy_field }}
+              </div>
+            </div>
+          
+
+          </div>
+        </div>
+            
+
+                   
+          </div>
+          
+        </div>
+
+<div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
+  <button type="submit" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Save</button>
+</div>
+
+</form>
+</div>
+
+<!-- Work experience ends here... -->
 
 
 
